s3fnet-lxc-p/experiment-data/PLC_Simple_Client_Server/1454186826/lxc0-0
Starting Debug for lxc0-0
Running Command /home/vignesh/Desktop/PLCs/awlsim-0.42/tests/run.sh --node 0 /home/vignesh/Desktop/PLCs/awlsim-0.42/tests/modbus/simple_client_server/sfb102_server.awl
6 (process ID) old priority 0, new priority 10
=== Running tests with 'python3'
Running test 'sfb102_server.awl' with 'python3' ... Traceback (most recent call last):
  File "/home/vignesh/Desktop/PLCs/awlsim-0.42/tests/../awlsim-cli", line 32, in <module>
    from awlsim.core import *
  File "/home/vignesh/Desktop/PLCs/awlsim-0.42/awlsim/core/__init__.py", line 12, in <module>
    from awlsim.core.all_modules import *			#@nocy
  File "/home/vignesh/Desktop/PLCs/awlsim-0.42/awlsim/core/all_modules.py", line 4, in <module>
    from awlsim.core.main import *
  File "/home/vignesh/Desktop/PLCs/awlsim-0.42/awlsim/core/main.py", line 29, in <module>
    from awlsim.core.cpu import *
  File "/home/vignesh/Desktop/PLCs/awlsim-0.42/awlsim/core/cpu.py", line 42, in <module>
    from awlsim.core.systemblocks.system_sfb import *
  File "/home/vignesh/Desktop/PLCs/awlsim-0.42/awlsim/core/systemblocks/system_sfb.py", line 32, in <module>
    from awlsim.core.systemblocks.system_sfb_102 import *
  File "/home/vignesh/Desktop/PLCs/awlsim-0.42/awlsim/core/systemblocks/system_sfb_102.py", line 5, in <module>
    from awlsim.core.systemblocks.connection import *	
  File "/home/vignesh/Desktop/PLCs/awlsim-0.42/awlsim/core/systemblocks/connection.py", line 145
    print error
              ^
SyntaxError: invalid syntax
=== TEST FAILED ===
Test 'sfb102_server.awl' FAILED
